  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format) and do not
    use tabs but use spaces for formatting
  * accompany each entry with github issue/PR number (Issue #xyz)
  * release numbers follow "Semantic Versioning" http://semver.org

------------------------------------------------------------------------------
??/??/?? IAlibay, PicoCentauri

 * 2.3.0

Fixes
  * Fixes awk call in deploy.yaml tests for macos runners (Issue #3693)

Enhancements
  * Add `norm` parameter to InterRDF, InterRDF_s to normalize as rdf,
    number density or do not normalize at all. (Issue #3687)

Changes

Deprecations
  * Deprecate `density` parameter in favor of `norm` in InterRDF_s
    (Issue #3687)


06/01/22 IAlibay, BFedder, inomag, Agorfa, aya9aladdin, shudipto-amin, cbouy,
         HenokB, umak1106, tamandeeps, Mrqeoqqt, megosato, AnirG, rishu235,
         mtiberti, manishsaini6421, Sukeerti1, robotjellyzone, markvrma, alescoulie,
         mjtadema, PicoCentauri, Atharva7K, aditi2906, orbeckst,  yuxuanzhuang,
         rsexton2, rafaelpap, richardjgowers, orioncohen

 * 2.2.0

Fixes
  * Fixed issue where Reader.copy() did not preserve optional arguments
    and kwargs passed to the original class (Issue #3664, PR #3685)
  * Iterating a SingleFrameReaderBase trajectory now rewinds the
    reader, resetting any modified trajectory attributes to those
    read from file. Fixes behavior that was previously undefined (Issue #3423)
  * Fixed Reader.copy() did not preserve convert_units=False (see PR #3642)
  * Fix the competition when generating offsets from multiple processes by
    using a interprocess file lock. (Issue #1988, PR #3375)
  * Fix the error when trying to load a corrupted offset file (Issue #3230
    PR #3375)
  * Fixed `OpenMMTopologyParser` not working when some or none of the elements
    are present in the openmm topology (Issue #3317, PR #3511).
  * Remove None from filenames in analysis.hole.HoleAnalysis (PR #3650)